recursion.hanoi.lessons.recursion.hanoi.HanoiBoard.scala.error
HanoiBoard:9: error: not found: value dest
      hanoi(n - 1, src, dest, other)
                        ^HanoiBoard:11: error: not found: value dest
      hanoi(n - 1, other, src, dest)
                               ^